feat(loop): close S2 Implement scoped code changes
Why:
Complete subtask S2 in continuous AI loop.
What:
- Finished implementation, gates, and doc sync for Implement scoped code changes.
Impact:
- Progresses issue 16 with traceable milestone delivery.
Risk:
- Medium. Verify integration on follow-up subtasks.
Test:
FAST_GATE:pass, FULL_GATE:pass, DOC_SYNC:pass
Prompt-Refs: ARCHITECT_v1,PLANNER_v1,BUILDER_v2,GUARDIAN_v1,REVIEWER_v1

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:smoke-ai-package": "vitest run tests/smoke",
     "simulate:scenario": "node --import tsx tools/simulate/run-scenario.ts",
     "simulate:batch": "node --import tsx tools/simulate/run-batch.ts",
+    "simulate:render-baseline": "node --import tsx tools/simulate/run-render-baseline.ts",
     "memory:install": "bash tools/git-memory/install.sh",
     "task:next": "node --import tsx tools/git-memory/task-next.ts",
     "gate:fast": "pnpm typecheck && pnpm test:determinism && pnpm test:schema",
